--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -61,12 +61,14 @@
      <Compile Include="Assets\scripts\gameLogic\MapScript.cs" />
      <Compile Include="Assets\scripts\gameLogic\MobPrefabScript.cs" />
      <Compile Include="Assets\scripts\gameLogic\MouseControls.cs" />
+     <Compile Include="Assets\scripts\gameLogic\resolveActionsScript.cs" />
      <Compile Include="Assets\scripts\gameLogic\SelectScript.cs" />
      <Compile Include="Assets\scripts\gameLogic\Type.cs" />
      <Compile Include="Assets\scripts\ig\CubeListScript.cs" />
      <Compile Include="Assets\scripts\ig\IgListScript.cs" />
      <Compile Include="Assets\scripts\ig\MobListScript.cs" />
      <Compile Include="Assets\scripts\ig\TypeTreeScript.cs" />
+     <Compile Include="Assets\scripts\igt\ActionIGT.cs" />
      <Compile Include="Assets\scripts\igt\CharacterIGT.cs" />
      <Compile Include="Assets\scripts\igt\CubeIGT.cs" />
      <Compile Include="Assets\scripts\igt\GameCoordIGT.cs" />
