--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -55,6 +55,8 @@
   <ItemGroup>
      <Compile Include="Assets\scripts\AssetScript.cs" />
      <Compile Include="Assets\scripts\gameLogic\CubePrefabScript.cs" />
+     <Compile Include="Assets\scripts\gameLogic\DScript.cs" />
+     <Compile Include="Assets\scripts\gameLogic\dump.cs" />
      <Compile Include="Assets\scripts\gameLogic\GraphicScript.cs" />
      <Compile Include="Assets\scripts\gameLogic\Index.cs" />
      <Compile Include="Assets\scripts\gameLogic\LayerScript.cs" />
