--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -61,10 +61,10 @@
      <Compile Include="Assets\scripts\gameLogic\Index.cs" />
      <Compile Include="Assets\scripts\gameLogic\LayerScript.cs" />
      <Compile Include="Assets\scripts\gameLogic\MapScript.cs" />
-     <Compile Include="Assets\scripts\gameLogic\MobPrefabScript.cs" />
      <Compile Include="Assets\scripts\gameLogic\MouseControls.cs" />
      <Compile Include="Assets\scripts\gameLogic\resolveActionsScript.cs" />
      <Compile Include="Assets\scripts\gameLogic\SelectScript.cs" />
+     <Compile Include="Assets\scripts\gameLogic\TokenPrefabScript.cs" />
      <Compile Include="Assets\scripts\gameLogic\Type.cs" />
      <Compile Include="Assets\scripts\ig\CubeListScript.cs" />
      <Compile Include="Assets\scripts\ig\IgListScript.cs" />
@@ -72,11 +72,11 @@
      <Compile Include="Assets\scripts\ig\TypeTreeScript.cs" />
      <Compile Include="Assets\scripts\igt\ActionIGT.cs" />
      <Compile Include="Assets\scripts\igt\CharacterIGT.cs" />
-     <Compile Include="Assets\scripts\igt\CubeIGT.cs" />
+     <Compile Include="Assets\scripts\igt\cubeIGT.cs" />
      <Compile Include="Assets\scripts\igt\GameCoordIGT.cs" />
-     <Compile Include="Assets\scripts\igt\MobIGT.cs" />
      <Compile Include="Assets\scripts\igt\RelationalActionIGT.cs" />
      <Compile Include="Assets\scripts\igt\TileIGT.cs" />
+     <Compile Include="Assets\scripts\igt\tokenIGT.cs" />
      <Compile Include="Assets\scripts\StuffScript.cs" />
      <Compile Include="Assets\scripts\thingScripts\Thing.cs" />
      <Compile Include="Assets\scripts\thingScripts\ThingDT.cs" />
