--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -53,7 +53,6 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
-     <Compile Include="Assets\scripts\AssetScript.cs" />
      <Compile Include="Assets\scripts\gameLogic\CubePrefabScript.cs" />
      <Compile Include="Assets\scripts\gameLogic\DScript.cs" />
      <Compile Include="Assets\scripts\gameLogic\dump.cs" />
@@ -64,6 +63,7 @@
      <Compile Include="Assets\scripts\gameLogic\MouseControls.cs" />
      <Compile Include="Assets\scripts\gameLogic\resolveActionsScript.cs" />
      <Compile Include="Assets\scripts\gameLogic\SelectScript.cs" />
+     <Compile Include="Assets\scripts\gameLogic\testDaedScript.cs" />
      <Compile Include="Assets\scripts\gameLogic\TokenPrefabScript.cs" />
      <Compile Include="Assets\scripts\gameLogic\Type.cs" />
      <Compile Include="Assets\scripts\ig\CubeListScript.cs" />
@@ -77,17 +77,6 @@
      <Compile Include="Assets\scripts\igt\RelationalActionIGT.cs" />
      <Compile Include="Assets\scripts\igt\TileIGT.cs" />
      <Compile Include="Assets\scripts\igt\tokenIGT.cs" />
-     <Compile Include="Assets\scripts\StuffScript.cs" />
-     <Compile Include="Assets\scripts\thingScripts\Thing.cs" />
-     <Compile Include="Assets\scripts\thingScripts\ThingDT.cs" />
-     <Compile Include="Assets\scripts\tileScripts\GameTile.cs" />
-     <Compile Include="Assets\scripts\tileScripts\moveTile.cs" />
-     <Compile Include="Assets\scripts\tileScripts\TileDT.cs" />
-     <Compile Include="Assets\scripts\tokenScripts\GraphicTokenScript.cs" />
-     <Compile Include="Assets\scripts\tokenScripts\SelectToken.cs" />
-     <Compile Include="Assets\scripts\tokenScripts\Token.cs" />
-     <Compile Include="Assets\scripts\tokenScripts\TokenDT.cs" />
-     <None Include="Assets\scripts\readme.txt" />
  <Reference Include="Unity.TextMeshPro.Editor">
  <HintPath>C:/Users/ohare/Documents/Daedalus 0.1/Library/ScriptAssemblies/Unity.TextMeshPro.Editor.dll</HintPath>
  </Reference>
