--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -53,9 +53,8 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
-     <Compile Include="Assets\scripts\gameLogic\CubePrefabScript.cs" />
      <Compile Include="Assets\scripts\gameLogic\DaedScript.cs" />
-     <Compile Include="Assets\scripts\gameLogic\dump.cs" />
+     <Compile Include="Assets\scripts\gameLogic\GameEnv.cs" />
      <Compile Include="Assets\scripts\gameLogic\GraphicScript.cs" />
      <Compile Include="Assets\scripts\gameLogic\Index.cs" />
      <Compile Include="Assets\scripts\gameLogic\LayerScript.cs" />
@@ -64,19 +63,20 @@
      <Compile Include="Assets\scripts\gameLogic\resolveActionsScript.cs" />
      <Compile Include="Assets\scripts\gameLogic\SelectScript.cs" />
      <Compile Include="Assets\scripts\gameLogic\testDaedScript.cs" />
-     <Compile Include="Assets\scripts\gameLogic\TokenPrefabScript.cs" />
      <Compile Include="Assets\scripts\gameLogic\Type.cs" />
+     <Compile Include="Assets\scripts\gameLogic\Utils.cs" />
      <Compile Include="Assets\scripts\ig\CubeListScript.cs" />
      <Compile Include="Assets\scripts\ig\IgListScript.cs" />
-     <Compile Include="Assets\scripts\ig\MobListScript.cs" />
+     <Compile Include="Assets\scripts\ig\TokenListScript.cs" />
      <Compile Include="Assets\scripts\ig\TypeTreeScript.cs" />
-     <Compile Include="Assets\scripts\igt\ActionIGT.cs" />
-     <Compile Include="Assets\scripts\igt\CharacterIGT.cs" />
-     <Compile Include="Assets\scripts\igt\cubeIGT.cs" />
-     <Compile Include="Assets\scripts\igt\GameCoordIGT.cs" />
-     <Compile Include="Assets\scripts\igt\RelationalActionIGT.cs" />
-     <Compile Include="Assets\scripts\igt\TileIGT.cs" />
-     <Compile Include="Assets\scripts\igt\tokenIGT.cs" />
+     <Compile Include="Assets\scripts\igt\Actions.cs" />
+     <Compile Include="Assets\scripts\igt\Character.cs" />
+     <Compile Include="Assets\scripts\igt\Cube.cs" />
+     <Compile Include="Assets\scripts\igt\GameCoord.cs" />
+     <Compile Include="Assets\scripts\igt\Tile.cs" />
+     <Compile Include="Assets\scripts\igt\Token.cs" />
+     <Compile Include="Assets\scripts\prefabs\CubePrefabScript.cs" />
+     <Compile Include="Assets\scripts\prefabs\TokenPrefabScript.cs" />
  <Reference Include="Unity.TextMeshPro.Editor">
  <HintPath>C:/Users/ohare/Documents/Daedalus 0.1/Library/ScriptAssemblies/Unity.TextMeshPro.Editor.dll</HintPath>
  </Reference>
